fix + version up